# km-to-sql

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  json.rs  lib.rs  metadata.rs  postgres.rs  postgres_schema.sql
test/: metadata.json
