[package]
name = "km-to-sql"
description = "Helpers and shared logic for KotobaMedia to-sql tools"
authors = ["Keita Kobayashi <keita@kotobamedia.com>"]
repository = "https://github.com/KotobaMedia/km-to-sql"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres"]
